fixed layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ a:hover {
 
 .postContent {
 	font-size:50px;
-	margin:0;
+	margin-top:-40px;
 }
 
 #date {
